--- a/client/src/components/GamesContainer/GamesContainer.module.css
+++ b/client/src/components/GamesContainer/GamesContainer.module.css
@@ -3,5 +3,5 @@
     grid-gap: 40px;
     grid-template-columns: 1fr 1fr 1fr;
     background-color: #171a21;
-    padding: 50px;
+    padding: 5%;
 }
