--- a/client/src/components/Landing/Landing.module.css
+++ b/client/src/components/Landing/Landing.module.css
@@ -8,17 +8,67 @@
     align-items: center;
 }
 
-.img {
+.container {
+    background-color: #171a21;
+    min-height: 100vh;
+    color: white;
+}
+
+.container, .cube, .loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading_container {
+    width: 20%;
+    height: 300px;
+}
+.cube {
+    height: 60%;
+    transform-style: preserve-3d;
+    animation: rotar 8s linear infinite;
+}
+
+.cube > span {
+    position: absolute;
+    width: 4em;
+    height: 4em;
+    border: 2px solid white;
+    box-shadow: inset 0px 0px 15px 5px rgba(67, 195, 255, .2), 0px
+    0px 40px 1px rgba(67, 195, 255, .15);
+    border-radius: 4px;
+}
+
+.cube >:nth-child(1) {transform: rotateY(90deg)translateZ(2em);}
+.cube >:nth-child(2) {transform: rotateY(90deg)translateZ(2em);}
+.cube >:nth-child(3) {transform: rotateY(90deg)translateZ(-2em);}
+.cube >:nth-child(4) {transform: rotateY(90deg)translateZ(2em);}
+.cube >:nth-child(5) {transform: translateZ(-2em);}
+.cube >:nth-child(6) {transform: translateZ(2em);}
+
+.loading {
+    height: 40%;
+}
+@keyframes rotar {
+    0%{transform: rotateY(0deg)rotateX(0deg);}
+    50%{transform: rotateY(360deg)rotateX(360deg);}
+    100%{transform: rotateY(0deg)rotateX(0deg);}
+}
+
+/* .img {
     z-index: 1;
     object-fit: cover;
     width: 100vw;
     height: 100vh;
-}
+} */
 
 .button {
-    z-index: 2;
-    position: absolute;
-    top: 50%;
-    padding: 20px;
-    width: 150px;
+    background-color: transparent;
+    border: none;
+    color: rgba(67, 195, 255, 1);
+}
+
+.link:hover {
+    cursor: pointer;
 }
